# synapse

./: Cargo.toml  Dockerfile.synapse  Justfile  README.md
examples/axum/: Cargo.toml  Dockerfile.app  docker-compose.yml
examples/axum/k6/: synapse_get.js
examples/axum/src/: handler.rs  main.rs  response.rs  state.rs
examples/fastapi/: Dockerfile.app  docker-compose.yml  main.py
examples/fastapi/k6/: synapse_get.js
synapse-core/: Cargo.toml
synapse-core/benches/: l1cache_bench.rs
synapse-core/src/: lib.rs
synapse-embedded-async-py/: Cargo.toml  pyproject.toml
synapse-embedded-async-py/src/: lib.rs
synapse-embedded-py/: Cargo.toml  pyproject.toml
synapse-embedded-py/src/: lib.rs
synapse-py/: Cargo.toml  pyproject.toml
synapse-py/src/: lib.rs
synapse-rust/: Cargo.toml
synapse-rust/src/: lib.rs
synapse-server/: Cargo.toml
synapse-server/benches/: uds.rs
synapse-server/src/: lib.rs  main.rs
synapse-server/src/redis/: client.rs  subscriber.rs
synapse-server/src/server/: grpc.rs  mod.rs  uds.rs
synapse-server/tests/: uds_test.rs
