[package]
name = "synapse-embedded-async-py"
version = "0.1.0"
edition = "2024"

[lib]
name = "synapse_embedded_async_py"
crate-type = ["cdylib"]

[dependencies]
synapse-core = { path = "../synapse-core" }

pyo3 = { version = "0.27.2", features = ["extension-module"] }
pyo3-async-runtimes = { version="0.27.0", features=["tokio-runtime"] }

tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
