[package]
name = "synapse-server"
version = "0.1.0"
edition = "2024"

[dependencies]
synapse-core = { path = "../synapse-core"}
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
bytes = "1.11.0"
futures = "0.3.31"
redis = { version="1.0.2", features=["tokio-comp"] }
serde = { version="1.0.2", features=["derive"] }
bincode = "2.0.1"

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "uds"
harness = false
