[package]
name = "axum"
version = "0.1.0"
edition = "2024"

[dependencies]
synapse-rust = { path="../../synapse-rust" }

axum = "0.8.8"
dotenv = "0.15.0"
serde = { version="1.0.228", features=["derive"] }
serde_json = "1.0.149"
tokio = { version="1.49.0", features=["full"] }
tower-http = { version="0.6.8", features=["cors", "fs"] }
